load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_library", "ocaml_signature")

ocaml_signature(
    name = "internal_event_sig",
    src = ":internal_event.mli",
    deps_opam = [
        "data-encoding",
        "lwt_log.core",
    ],
    opts = [
        "-open",
        "Tezos_stdlib",
        "-open",
        "Data_encoding",
        "-open",
        "Tezos_error_monad",
        "-open",
        "Tezos_error_monad.TzLwtreslib",
    ],
    deps = [
        "@tezos//src/lib_error_monad:#Tezos_error_monad",
        "@tezos//src/lib_lwt_result_stdlib:#Tezos_lwt_result_stdlib",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
    ],
)

ocaml_module(
    name = "internal_event",
    deps_opam = [
        "data-encoding",
        "lwt_log.core",
    ],
    opts = [
        "-open",
        "Tezos_stdlib",
        "-open",
        "Data_encoding",
        "-open",
        "Tezos_error_monad",
        "-open",
        "Tezos_error_monad.TzLwtreslib",
    ],
    sig = ":internal_event_sig",
    struct = ":internal_event.ml",
    deps = [
        "@tezos//src/lib_error_monad:#Tezos_error_monad",
        "@tezos//src/lib_lwt_result_stdlib:#Tezos_lwt_result_stdlib",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
    ],
)

# okapi:auto
# okapi:public_name tezos-event-logging
ocaml_ns_library(
    name = "#Tezos_event_logging",
    submodules = [":internal_event"],
    visibility = ["//visibility:public"],
)
