load("@obazl_rules_ocaml//ocaml:rules.bzl",
     "ocaml_module",
     "ocaml_ns_library",
     "ocaml_signature")

ocaml_signature(
    name = "hacl__sig",
    src = ":hacl.mli",
    deps = [
        "@hacl-star//:hacl-star",
        "@hacl-star-raw//:hacl-star-raw",
    ],
)

ocaml_module(
    name = "hacl",
    sig = ":hacl__sig",
    struct = ":hacl.ml",
    deps = [
        "@hacl-star//:hacl-star",
        "@hacl-star-raw//:hacl-star-raw",
    ],
)

# okapi:public_name tezos-hacl-glue
# ocaml_ns_library(
ocaml_ns_library(
    name = "Tezos_hacl_glue",
    submodules = [":hacl"],
    visibility = ["//visibility:public"],
)
