load("@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_archive",
    "ocaml_module",
    "ocaml_ns_archive",
    "ocaml_signature",
)

###############################################
########### Archive/Library Targets ###########

######## tezos-hacl-glue ########
TEZOS_HACL_GLUE_DEPS = [
    "@hacl-star-raw//:hacl-star-raw",
    "@hacl-star//:hacl-star",
]

ocaml_ns_archive(
    name       = "tezos-hacl-glue",
    ns         = "Tezos_hacl_glue",
    visibility = ["//visibility:public"],
    submodules = [
        ":Hacl",
    ],
)

#############################
####  Singleton Targets  ####

ocaml_module(
    name     = "Hacl",
    struct   = "hacl.ml",
    sig      = ":Hacl_cmi",
    deps     = TEZOS_HACL_GLUE_DEPS + [
    ]
)

ocaml_signature(
    name     = "Hacl_cmi",
    src      = "hacl.mli",
    deps     = TEZOS_HACL_GLUE_DEPS + [
    ]
)

