load("@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_archive",
    "ocaml_module",
    "ocaml_ns_archive",
    "ocaml_signature",
)

###############################################
########### Archive/Library Targets ###########

######## tezos-lwt-result-stdlib ########
TEZOS_LWT_RESULT_STDLIB_DEPS = [
    "//src/lib_lwt_result_stdlib/bare/sigs:tezos-lwt-result-stdlib.bare.sigs",
    "//src/lib_lwt_result_stdlib/bare/structs:tezos-lwt-result-stdlib.bare.structs",
    "//src/lib_lwt_result_stdlib/traced/sigs:tezos-lwt-result-stdlib.traced.sigs",
    "//src/lib_lwt_result_stdlib/traced/structs:tezos-lwt-result-stdlib.traced.structs",
    "@lwt//:lwt",
]

ocaml_ns_archive(
    name       = "tezos-lwt-result-stdlib",
    ns         = "Tezos_lwt_result_stdlib",
    visibility = ["//visibility:public"],
    submodules = [
        ":Lwtreslib",
    ],
)

#############################
####  Singleton Targets  ####

ocaml_module(
    name     = "Lwtreslib",
    struct   = "lwtreslib.ml",
    sig      = ":Lwtreslib_cmi",
    deps     = TEZOS_LWT_RESULT_STDLIB_DEPS + [
    ]
)

ocaml_signature(
    name     = "Lwtreslib_cmi",
    src      = "lwtreslib.mli",
    deps     = TEZOS_LWT_RESULT_STDLIB_DEPS + [
    ]
)

