load("@obazl_rules_ocaml//ocaml:rules.bzl",
     "ocaml_signature",
     "ppx_executable",
     "ppx_module",
     "ppx_ns_library")

ppx_executable(
    name = "ppx",
    deps = ["@ocaml//lib/ppx_inline_test"],
    main = "@ppx//driver",
)

ocaml_signature(
    name = "micheline__sig",
    src = ":micheline.mli",
    opts = [
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_error_monad",
        "-open",
        "Data_encoding",
    ],
    ppx = ":ppx",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    deps = [
        "@ocaml//lib/data-encoding",
        "@ocaml//lib/ppx_inline_test",
        "@ocaml//lib/uutf",
        "@ocaml//lib/zarith",
        "@tezos//src/lib_error_monad:Tezos_error_monad",
        "@tezos//src/lib_stdlib:Tezos_stdlib",
    ],
)

ppx_module(
    name = "micheline",
    opts = [
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_error_monad",
        "-open",
        "Data_encoding",
    ],
    ppx = ":ppx",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    sig = ":micheline__sig",
    struct = ":micheline.ml",
    deps = [
        "@ocaml//lib/data-encoding",
        "@ocaml//lib/ppx_inline_test",
        "@ocaml//lib/uutf",
        "@ocaml//lib/zarith",
        "@tezos//src/lib_error_monad:Tezos_error_monad",
        "@tezos//src/lib_stdlib:Tezos_stdlib",
    ],
)

ocaml_signature(
    name = "micheline_parser__sig",
    src = ":micheline_parser.mli",
    opts = [
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_error_monad",
        "-open",
        "Data_encoding",
    ],
    ppx = ":ppx",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    deps = [
        ":micheline",
        "@ocaml//lib/data-encoding",
        "@ocaml//lib/ppx_inline_test",
        "@ocaml//lib/uutf",
        "@ocaml//lib/zarith",
        "@tezos//src/lib_error_monad:Tezos_error_monad",
        "@tezos//src/lib_stdlib:Tezos_stdlib",
    ],
)

ppx_module(
    name = "micheline_parser",
    opts = [
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_error_monad",
        "-open",
        "Data_encoding",
    ],
    ppx = ":ppx",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    sig = ":micheline_parser__sig",
    struct = ":micheline_parser.ml",
    deps = [
        ":micheline",
        "@ocaml//lib/data-encoding",
        "@ocaml//lib/ppx_inline_test",
        "@ocaml//lib/uutf",
        "@ocaml//lib/zarith",
        "@tezos//src/lib_error_monad:Tezos_error_monad",
        "@tezos//src/lib_stdlib:Tezos_stdlib",
    ],
)

ocaml_signature(
    name = "micheline_printer__sig",
    src = ":micheline_printer.mli",
    opts = [
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_error_monad",
        "-open",
        "Data_encoding",
    ],
    ppx = ":ppx",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    deps = [
        ":micheline",
        "@ocaml//lib/data-encoding",
        "@ocaml//lib/ppx_inline_test",
        "@ocaml//lib/uutf",
        "@ocaml//lib/zarith",
        "@tezos//src/lib_error_monad:Tezos_error_monad",
        "@tezos//src/lib_stdlib:Tezos_stdlib",
    ],
)

ppx_module(
    name = "micheline_printer",
    opts = [
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_error_monad",
        "-open",
        "Data_encoding",
    ],
    ppx = ":ppx",
    ppx_print = "@ppx//print:text",
    ppx_tags = ["inline-test"],
    sig = ":micheline_printer__sig",
    struct = ":micheline_printer.ml",
    deps = [
        ":micheline",
        "@ocaml//lib/data-encoding",
        "@ocaml//lib/ppx_inline_test",
        "@ocaml//lib/uutf",
        "@ocaml//lib/zarith",
        "@tezos//src/lib_error_monad:Tezos_error_monad",
        "@tezos//src/lib_stdlib:Tezos_stdlib",
    ],
)

# okapi:auto
# okapi:public_name tezos-micheline
ppx_ns_library(
    name = "Tezos_micheline",
    submodules = [
        ":micheline",
        ":micheline_parser",
        ":micheline_printer",
    ],
    visibility = ["//visibility:public"],
)
